--- a/FlutterAPP/mi_primer_app/pubspec.yaml
+++ b/FlutterAPP/mi_primer_app/pubspec.yaml
@@ -56,6 +56,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  cupertino_icons: ^1.0.8
+  record: ^6.1.1
+  http: ^1.5.0
+  path_provider: ^2.1.5
+  http_parser: ^4.0.2
+  geolocator: ^14.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
